--- a/templates/rebase.html
+++ b/templates/rebase.html
@@ -144,37 +144,11 @@
               class="navbar-nav"
               data-top-nav-dropdowns="data-top-nav-dropdowns"
             >
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  id="register-users"
-                  >Veri Ekleme</a
-                >
-                <div
-                  class="dropdown-menu dropdown-caret dropdown-menu-card border-0 mt-0"
-                  aria-labelledby="register-users"
-                >
-                  <div class="bg-white dark__bg-1000 rounded-3 py-2">
-                    <a
-                      class="dropdown-item link-600 fw-medium"
-                      href="/register-patient"
-                      >Hasta Ekle</a
-                    >
-                  </div>
-                  <div class="bg-white dark__bg-1000 rounded-3 py-2">
-                    <a
-                      class="dropdown-item link-600 fw-medium"
-                      href="/register-donor"
-                      >Donör Ekle</a
-                    >
-                  </div>
-                </div>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link link-600 fw-medium" href="/register-tuple"
+                >Veri Ekleme</a
+              >
+            </li>
               <li class="nav-item">
                 <a class="nav-link link-600 fw-medium" href="/matches"
                   >Eşleşmeler</a
