--- a/templates/register-tuple.html
+++ b/templates/register-tuple.html
@@ -594,13 +594,13 @@ page_content %}
     }
   }
   // LSA Sınıf 1 fields
-  populateLSAOptions("lsa1-A", "LSA1-A", 1, 99);
-  populateLSAOptions("lsa1-B", "LSA1-B", 1, 160);
-  populateLSAOptions("lsa1-C", "LSA1-C", 1, 20);
+  populateLSAOptions("lsa1-A", "A", 1, 99);
+  populateLSAOptions("lsa1-B", "B", 1, 160);
+  populateLSAOptions("lsa1-C", "C", 1, 20);
   // LSA Sınıf 2 fields
-  populateLSAOptions("lsa2-DRB1", "LSA2-DRB1", 1, 40);
-  populateLSAOptions("lsa2-DQB1", "LSA2-DQB1", 1, 20);
-  populateLSAOptions("lsa2-DQB2", "LSA2-DQB2", 1, 20);
+  populateLSAOptions("lsa2-DRB1", "DRB1", 1, 40);
+  populateLSAOptions("lsa2-DQB1", "DQB1", 1, 20);
+  populateLSAOptions("lsa2-DQB2", "DQB2", 1, 20);
 
   // Single combined submit event
   document
